--- a/system/main/playbooks/package/nvim.yml
+++ b/system/main/playbooks/package/nvim.yml
@@ -1,7 +1,7 @@
 ---
 # https://github.com/neovim/neovim
 - name: Install nvim
-  pacman: name=community/neovim state=present
+  community.general.pacman: name=community/neovim state=present
   become: true
 
 - name: Setup vim-plug
@@ -9,7 +9,7 @@
     vim_plug_path: "$HOME/.local/share/nvim/site/autoload/plug.vim"
   block:
     - name: Install vim-plug
-      shell: |
+      ansible.builtin.shell: |
         sh -c 'curl -fLo "{{ vim_plug_path }}" --create-dirs \
          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
       args:
@@ -17,19 +17,19 @@
       changed_when: false
 
     - name: Install vim-plug plugins
-      command: "nvim +PlugInstall +qall"
+      ansible.builtin.command: "nvim +PlugInstall +qall"
       changed_when: false
 
     - name: Install coc-nvim plugins
-      command: "nvim +CocUpdateSync +qall"
+      ansible.builtin.command: "nvim +CocUpdateSync +qall"
       changed_when: false
 
 - name: Install neovim tools
-  pacman:
+  community.general.pacman:
     name:
       - extra/ctags  # https://github.com/universal-ctags/ctags
     state: present
   become: true
 
 - name: Install pynvim  # see `:h provider-python` in neovim
-  pip: name=pynvim state=present
+  ansible.builtin.pip: name=pynvim state=present
