--- a/system/main/playbooks/package/terraform.yml
+++ b/system/main/playbooks/package/terraform.yml
@@ -3,7 +3,7 @@
 - name: Install Terraform and tools
   block:
     - name: Terraform install
-      pacman:
+      community.general.pacman:
         name:
           - community/terraform
         state: present
