--- a/system/main/playbooks/package/tmux.yml
+++ b/system/main/playbooks/package/tmux.yml
@@ -1,5 +1,5 @@
 ---
 # https://github.com/tmux/tmux
 - name: Install tmux
-  pacman: name=community/tmux state=present
+  community.general.pacman: name=community/tmux state=present
   become: true
