--- a/system/main/playbooks/base/fonts.yml
+++ b/system/main/playbooks/base/fonts.yml
@@ -1,4 +1,13 @@
 ---
+# Fonts
+#
+# List fonts
+#   fc-list
+#
+# Match a font from the list
+#   fc-match emoji
+#
+
 # https://www.gnu.org/software/freefont/
 - name: Install GNU Free Fonts
   community.general.pacman:
@@ -12,6 +21,7 @@
     name:
       - extra/noto-fonts
       - extra/noto-fonts-extra
+      - extra/noto-fonts-emoji
     state: present
   become: true
 
@@ -22,3 +32,20 @@
     use: yay
     name: nerd-fonts-jetbrains-mono
     state: present
+
+- name: Setup fontconfig
+  ansible.builtin.copy:
+    dest: "{{ ansible_env.HOME }}/.config/fontconfig/fonts.conf"
+    content: |
+      <?xml version="1.0"?>
+      <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
+      <fontconfig>
+      <alias>
+         <family>monospace</family>
+         <prefer>
+           <family>JetBrainsMono Nerd Font Mono</family>
+           <family>Noto Color Emoji</family>
+         </prefer>
+       </alias>
+      </fontconfig>
+    mode: 0644
