--- a/system/main/playbooks/xfce/main.yml
+++ b/system/main/playbooks/xfce/main.yml
@@ -10,6 +10,7 @@
       community.general.pacman:
         name:
           - community/xfce4-whiskermenu-plugin
+          - extra/xfce4-clipman-plugin
         state: present
       become: true
 
