--- a/system/main/playbooks/base/main.yml
+++ b/system/main/playbooks/base/main.yml
@@ -8,11 +8,9 @@
     yay_install_dir: "{{ workbench_dir }}/yay"
     pacman_updated_file: "{{ workbench_dir }}/.ansible_pacman_updated"
   tasks:
-    - name: Set the hostname
-      ansible.builtin.hostname:
-        name: "{{ arg_hostname }}"
-        use: systemd
-      become: true
+    - name: Set hostname
+      import_tasks: hostname.yml
+      tags: base.hostname
 
     - name: Have a workbench folder belonging to user
       ansible.builtin.file:
@@ -61,9 +59,17 @@
       import_tasks: essential.yml
       tags: base.essential
 
+    - name: Setup etckeeper
+      import_tasks: etckeeper.yml
+      tags: base.etckeeper
+
     - name: Setup fonts
       import_tasks: fonts.yml
       tags: base.fonts
+
+    - name: Setup xdg
+      import_tasks: xdg.yml
+      tags: base.xdg
 
     - name: Network tools
       import_tasks: network.yml
