--- a/system/main/playbooks/ntp/main.yml
+++ b/system/main/playbooks/ntp/main.yml
@@ -6,11 +6,12 @@
     - name: Ensure NTP is installed
       community.general.pacman: name=extra/ntp state=present
       become: true
-      notify: NTP is running
+      notify: NTP running
 
   handlers:
-    - name: NTP is running
+    - name: NTP running
       ansible.builtin.service:
         name: systemd-timesyncd
         state: started
         enabled: true
+      become: true
