--- a/system/main/playbooks/package/npm.yml
+++ b/system/main/playbooks/package/npm.yml
@@ -12,3 +12,4 @@
     - dotenv-cli
     - semver
     - json-server  # https://github.com/typicode/json-server
+    - git-standup # https://github.com/kamranahmedse/git-standup
