xfce stuff & gpg

--- a/system/main/ansible.cfg
+++ b/system/main/ansible.cfg
@@ -4,6 +4,8 @@ interpreter_python = /usr/bin/python
 # disable SSH 'authenticity of host' checking
 # https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
 host_key_checking = False
+# vault gpg file for `--vault-password-file` argument
+vault_password_file = vault_pass.sh
 
 [privilege_escalation]
 # https://docs.ansible.com/ansible/latest/reference_appendices/config.html#default-become-method
