--- a/system/main/playbooks/python/main.yml
+++ b/system/main/playbooks/python/main.yml
@@ -33,7 +33,7 @@
         path: /usr/bin/python
 
     - name: Ensure pip is ready
-      command: /usr/bin/python -m ensurepip
+      command: /usr/bin/python -m ensurepip --upgrade
       changed_when: false
 
     - name: Install pyenv
@@ -45,8 +45,9 @@
         path: "{{ item }}"
         marker: "# {mark} ANSIBLE MANAGED BLOCK: pyenv"
         block: |
-          export PYENV_ROOT="$HOME/.pyenv"
-          export PATH="$PYENV_ROOT/bin:$PATH"
+          typeset -U path PATH
+          path=($HOME/.pyenv/bin $path)
+          export PATH
           eval "$(pyenv init --path)"
           eval "$(pyenv init -)"
         mode: 0644
@@ -54,7 +55,6 @@
         state: present
       loop:
         - "{{ ansible_env.HOME }}/.zshenv"
-        - "{{ ansible_env.HOME }}/.bash_profile"
 
     - name: Install pyenv versions
       ansible.builtin.command:
