--- a/system/main/main.yml
+++ b/system/main/main.yml
@@ -6,6 +6,7 @@
 - import_playbook: playbooks/base/main.yml
 - import_playbook: playbooks/ntp/main.yml
 - import_playbook: playbooks/locale/main.yml
+- import_playbook: playbooks/ufw/main.yml
 - import_playbook: playbooks/bluetooth/main.yml
 - import_playbook: playbooks/ssh/main.yml
 - import_playbook: playbooks/docker/main.yml
@@ -14,3 +15,4 @@
 - import_playbook: playbooks/package/main.yml
 - import_playbook: playbooks/gui/main.yml
 - import_playbook: playbooks/xfce4/main.yml
+- import_playbook: playbooks/work/main.yml
