--- a/system/main/playbooks/base/essential.yml
+++ b/system/main/playbooks/base/essential.yml
@@ -2,13 +2,16 @@
 - name: Other essential packages
   community.general.pacman:
     name:
-      - extra/git
+      - core/coreutils
       - core/man-db
       - core/curl
+      - extra/git
       - extra/wget
       - extra/vim
       - extra/tree
       - extra/lsof
       - extra/xclip
+      - extra/strace
+      - community/pwgen
     state: present
   become: true
