--- a/system/main/playbooks/base/fonts.yml
+++ b/system/main/playbooks/base/fonts.yml
@@ -22,6 +22,7 @@
       - extra/noto-fonts
       - extra/noto-fonts-extra
       - extra/noto-fonts-emoji
+      - extra/noto-fonts-cjk
     state: present
   become: true
 
